objects/Rosco_Coverage__c/Rosco_Coverage__c.object-meta.xml
<CustomObject>
    <label>Rosco_Coverage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rosco_Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>