objects/Rosco_Coverage__c/fields/Assigned_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Group__c</fullName>
    <label>Assigned Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>