objects/Rosco_Coverage__c/fields/Assigned_People__c.field-meta.xml
<CustomField>
    <fullName>Assigned_People__c</fullName>
    <label>Assigned People</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>