objects/Rosco_Coverage__c/fields/Block_start__c.field-meta.xml
<CustomField>
    <fullName>Block_start__c</fullName>
    <label>Block start (utc time)</label>
    <type>DateTime</type>
</CustomField>