objects/Rosco_Coverage__c/fields/Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour__c</fullName>
    <label>Business Hour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>