objects/Rosco_Coverage__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field TAM</fullName>
            </value>
            <value>
                <fullName>Support Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>